[gd_scene load_steps=27 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://Enemy_Body.gd" type="Script" id=2]
[ext_resource path="res://Images/Enemys/Ceramic/3.png" type="Texture" id=3]
[ext_resource path="res://Images/Enemys/Ceramic/5.png" type="Texture" id=4]
[ext_resource path="res://Images/Enemys/Ceramic/2.png" type="Texture" id=5]
[ext_resource path="res://Images/Enemys/Black.png" type="Texture" id=6]
[ext_resource path="res://Images/Enemys/Red.png" type="Texture" id=7]
[ext_resource path="res://Images/Enemys/Ceramic/Full.png" type="Texture" id=8]
[ext_resource path="res://Images/Enemys/Ying.png" type="Texture" id=9]
[ext_resource path="res://Images/Enemys/Ceramic/8.png" type="Texture" id=10]
[ext_resource path="res://Images/Enemys/Ceramic/7.png" type="Texture" id=11]
[ext_resource path="res://Images/Enemys/White.png" type="Texture" id=12]
[ext_resource path="res://Images/Enemys/Ceramic/1.png" type="Texture" id=13]
[ext_resource path="res://Images/Enemys/Ceramic/6.png" type="Texture" id=14]
[ext_resource path="res://Images/Enemys/Green.png" type="Texture" id=15]
[ext_resource path="res://Images/Enemys/Ceramic/9.png" type="Texture" id=16]
[ext_resource path="res://Images/Enemys/Rainbow.png" type="Texture" id=17]
[ext_resource path="res://Images/Enemys/Blue.png" type="Texture" id=18]
[ext_resource path="res://Images/Enemys/Ceramic/4.png" type="Texture" id=19]
[ext_resource path="res://Images/Enemys/Glue.png" type="Texture" id=20]
[ext_resource path="res://Images/Enemys/Ice.png" type="Texture" id=21]
[ext_resource path="res://Images/Enemys/Confused.png" type="Texture" id=22]
[ext_resource path="res://Images/Enemys/Poison.png" type="Texture" id=23]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 15 ), ExtResource( 7 ), ExtResource( 12 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 14 ), ExtResource( 4 ), ExtResource( 19 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 13 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 28.6173, 17.9993 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Enemy" type="PathFollow2D" groups=[
"Enemy",
]]
position = Vector2( -8, 40 )
rotation = -0.000217531
rotate = false
loop = false
script = ExtResource( 1 )

[node name="Enemy_Body" type="KinematicBody2D" parent="." groups=[
"Enemy",
]]
collision_layer = 7
collision_mask = 7
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="Enemy_Body"]
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy_Body" groups=[
"Enemy",
]]
shape = SubResource( 2 )

[node name="Effect" type="AnimatedSprite" parent="Enemy_Body"]
visible = false
frames = SubResource( 3 )

[node name="Poison" type="Timer" parent="Enemy_Body"]
wait_time = 2.0
one_shot = true

[node name="Timer" type="Timer" parent="Enemy_Body"]
one_shot = true

[node name="Regen" type="Timer" parent="Enemy_Body"]
wait_time = 5.0

[node name="Shooting" type="Timer" parent="Enemy_Body"]
wait_time = 2.0
autostart = true
[connection signal="timeout" from="Enemy_Body/Poison" to="Enemy_Body" method="_on_Poison_timeout"]
[connection signal="timeout" from="Enemy_Body/Timer" to="Enemy_Body" method="_on_Timer_timeout"]
[connection signal="timeout" from="Enemy_Body/Regen" to="Enemy_Body" method="_on_Regen_timeout"]
[connection signal="timeout" from="Enemy_Body/Shooting" to="Enemy_Body" method="_on_Shooting_timeout"]
